@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="iso-8859-1" standalone="no" ?>
 <!DOCTYPE phrases SYSTEM "entities.dtd">
 
-<epp:phrases xmlns="http://www.w3.org/1999/xhtml" xmlns:epp="http://eprints.org/ep3/phrase">
+<epp:phrases xmlns="http://www.w3.org/1999/xhtml" xmlns:epp="http://eprints.org/ep3/phrase" xmlns:epc="http://eprints.org/ep3/control">
 
      <epp:phrase id="viewname_eprint_people">Person</epp:phrase>
      <epp:phrase id="viewname_eprint_status">Status</epp:phrase>
      <epp:phrase id="viewname_eprint_year">Year</epp:phrase>
      <epp:phrase id="viewname_eprint_subjects">Subject</epp:phrase>
+     <epp:phrase id="viewtitle_eprint_subjects_menu_1">Browse by Subject and Year</epp:phrase>
+     <epp:phrase id="viewtitle_eprint_subjects_menu_2">Browse by Year where Subject is "<epc:pin name="value1" />"</epp:phrase>
+     <epp:phrase id="viewtitle_eprint_subjects_list">Items where Subject is "<epc:pin name="value1" />" and Year is <epc:pin name="value2" /></epp:phrase>
+     <epp:phrase id="viewtitle_eprint_year_menu_1">Browse by Year</epp:phrase>
+     <epp:phrase id="viewtitle_eprint_year_list">Items where Year is <epc:pin name="value1" /></epp:phrase>
      <epp:phrase id="viewname_eprint_types">Type</epp:phrase>
 
 </epp:phrases>
