@@ -193,7 +193,14 @@ EPrints Modules
 <table width="100%"><tr>
   <td align="left">Export <epc:pin name="count" /> results as <epc:pin name="menu"/><epc:pin name="button"/></td>
   <td align="right"><epc:pin name="feeds"/></td>
-</tr></table>
+</tr>
+<tr>
+  <td align="left" colspan="2">
+    <epc:pin name="tools"/>
+  </td>
+</tr>
+</table>
+
 </epp:phrase>
     <epp:phrase id="lib/searchexpression:export_button">Export</epp:phrase>
     <epp:phrase id="lib/searchexpression:reorder_button">Reorder</epp:phrase>
@@ -917,7 +924,7 @@ Public CGI Scripts
 	<epp:phrase id="cgi/openurl:no_match_blurb"><p>The OpenURL resolver couldn't find the record you searched for.</p></epp:phrase>
 
 <!--********************************************************************** 
-Command Line Scripts 
+Views
 ***********************************************************************-->
 
 <!-- generate_views -->
@@ -930,6 +937,13 @@ Command Line Scripts
     <epp:phrase id="bin/generate_views:browsetitle">Browse Items</epp:phrase>
     <epp:phrase id="bin/generate_views:browseintro"><div class="ep_view_browse_intro">Items may be browsed by the following:</div></epp:phrase>
     <epp:phrase id="bin/generate_views:timestamp"><div class="ep_view_timestamp">This list was generated on <strong><epc:pin name="time"/></strong>.</div></epp:phrase>
+    <epp:phrase id="Update/Views:group_by"><div class="ep_view_group_by">Group by: <epc:pin name="groups" /></div></epp:phrase>
+    <epp:phrase id="Update/Views:current_group"><span class="ep_view_group_by_current"><epc:pin name="group" /></span></epp:phrase>
+    <epp:phrase id="Update/Views:group_seperator"> | </epp:phrase>
+    <epp:phrase id="Update/Views:no_grouping">No Grouping</epp:phrase>
+    <epp:phrase id="Update/Views:no_grouping_title">Nothing</epp:phrase>
+    <epp:phrase id="Update/Views:jump_to"><div class="ep_view_jump_to">Jump to: <epc:pin name="jumps" /></div></epp:phrase>
+    <epp:phrase id="Update/Views:jump_seperator"> | </epp:phrase>
 
 
 <!--********************************************************************** 
