@@ -39,6 +39,8 @@ use strict;
 # * the sub menu of a view
 # * a page within a single value of a view
 
+# Does not update the file if it's not needed.
+
 sub update_view_file
 {
 	my( $session, $langid, $localpath, $uri ) = @_;
@@ -47,15 +49,20 @@ sub update_view_file
 
 	my $target = $repository->get_conf( "htdocs_path" )."/".$langid.$localpath;
 	$target =~ s/\.[^\.]*$//;
+	my $age;
 	if( -e "$target.page" ) 
 	{
-		my $this_mtime = EPrints::Utils::mtime( "$target.page" );
-		my $age = time-$this_mtime;
-		print STDERR "$target - $age (update?)\n";
+		$age = time - EPrints::Utils::mtime( "$target.page" );
 	}
 
 	if( $uri eq "/view/" )
 	{
+		# This should really be updated by hand, but updating it once
+		# a day shouldn't hurt.
+		if( defined $age && $age < 24*60*60 )
+		{
+			return;
+		}
 		update_browse_view_list( $session, $langid );
 		return;
 	}
@@ -74,14 +81,27 @@ sub update_view_file
 		EPrints::abort( "view with ID '$viewid' is not available." );
 	}
 
+	my $max_menu_age = $view->{max_menu_age} || 24*60*60;
+	my $max_list_age = $view->{max_list_age} || 24*60*60;
+
 	if( !EPrints::Utils::is_set( $viewinfo ) )
 	{
+		if( defined $age && $age < $max_menu_age )
+		{
+			return;
+		}
+
 		update_view_menu( $session, $view, $langid );
 		return;
 	}
 
 	if( $viewinfo =~ s/\/$// )
 	{
+		if( defined $age && $age < $max_menu_age )
+		{
+			return;
+		}
+
 		# if it ends with "/" then it's a submenu
 		my @view_path = split( '/', $viewinfo );
 		
@@ -89,10 +109,16 @@ sub update_view_file
 		return;
 	}
 
-	# Otherwise it's (probably) a view page
+	# Otherwise it's (probably) a view list
+
+	if( defined $age && $age < $max_list_age )
+	{
+		return;
+	}
+
 	my @view_path = split( '/', $viewinfo );
 	
-	update_view_page( $session, $view, $langid, \@view_path );
+	update_view_list( $session, $view, $langid, \@view_path );
 }
 
 
@@ -107,7 +133,6 @@ sub update_browse_view_list
 	my $repository = $session->get_repository;
 
 	my $target = $repository->get_conf( "htdocs_path" )."/".$langid."/view/index";
-	print STDERR "Reminder: this should only happen sometimes!\n";
 
 	my $ds = $repository->get_dataset( "archive" );
 
@@ -226,8 +251,6 @@ sub update_view_menu
 		$target .= "index";
 	}
 
-	print STDERR "Reminder: this should only happen sometimes! (update_view_menu)\n";
-
 	my $menu_level = 0;
 	my $filters;
 	if( defined $path_values )
@@ -302,11 +325,29 @@ sub update_view_menu
 				\@menu_fields,
 				$has_submenu ) );
 
-	# top level index
-	my $title = $session->html_phrase(
+
+	my $title;
+	my $phrase_id = "viewtitle_".$ds->confid()."_".$view->{id}."_menu_".( $menu_level + 1 );
+
+	if( $session->get_lang()->has_phrase( $phrase_id ) && defined $path_values )
+	{
+		my %o = ();
+		for( my $i = 0; $i < scalar( @{$path_values} ); ++$i )
+		{
+			my @menu_fields = @{$fields[$i]};
+			$o{"value".($i+1)} = $menu_fields[0]->render_single_value( $session, $path_values->[$i]);
+		}
+		$title = $session->html_phrase( $phrase_id, %o );
+	}
+
+	if( !defined $title )
+	{
+		$title = $session->html_phrase(
 			"bin/generate_views:indextitle",
 			viewname=>$session->make_text(
 				$session->get_view_name( $ds, $view->{id} ) ) );
+	}
+
 
 	# Write page to disk
 	
@@ -391,7 +432,13 @@ sub render_view_menu
 
 	foreach my $value ( @{$values} )
 	{
-		next if( $view->{hideempty} && defined $sizes && defined $sizes->{$value} && $sizes->{$value} == 0 );
+		my $size = 0;
+		if( defined $sizes && defined $sizes->{$value} )
+		{
+			$size = $sizes->{$value};
+		}
+
+		next if( $view->{hideempty} && $size == 0 );
 
 		my $fileid = &mk_file_id( $value, $fields->[0]->get_type );
 
@@ -458,6 +505,7 @@ sub render_view_subj_menu
                                 ($has_submenu?3:2),
                                 $sizes ) );
         }
+
         return $f;
 }
 
@@ -500,9 +548,9 @@ sub get_fields_from_config
 }
 
 
-# Update a (set of) view page(s) - potentially expensive to do.
+# Update a (set of) view list(s) - potentially expensive to do.
 
-sub update_view_page
+sub update_view_list
 {
 	my( $session, $view, $langid, $path_values ) = @_;
 
@@ -517,8 +565,6 @@ sub update_view_page
 	$target .= $value;
 
 	push @{$path_values}, $value;
-
-	print STDERR "Reminder: this should only happen sometimes! (update_view_page) $target\n";
 
 	my $ds = $repository->get_dataset( "archive" );
 
@@ -557,7 +603,7 @@ sub update_view_page
 	# etc.
 	if( $menu_level != scalar @fields )
 	{
-		$repository->log( "Wrong depth to generate a view page: ".$view->{id}."/".join( "/", @{$path_values} ) );
+		$repository->log( "Wrong depth to generate a view list: ".$view->{id}."/".join( "/", @{$path_values} ) );
 		return;
 	}
 
@@ -597,56 +643,107 @@ sub update_view_page
 
 		push @files, $page_file_name;
 
+		my $need_path = $page_file_name;
+		$need_path =~ s/\/[^\/]*$//;
+		EPrints::Platform::mkdir( $need_path );
+
+		my $title;
+		my $phrase_id = "viewtitle_".$ds->confid()."_".$view->{id}."_list";
+	
+		if( $session->get_lang()->has_phrase( $phrase_id ) )
+		{
+			my %o = ();
+			for( my $i = 0; $i < scalar( @{$path_values} ); ++$i )
+			{
+				my @menu_fields = @{$fields[$i]};
+				$o{"value".($i+1)} = EPrints::Utils::tree_to_utf8($menu_fields[0]->render_single_value( $session, $path_values->[$i]));
+			}
+			if( $fieldname eq "DEFAULT" )
+			{
+				$o{"grouping"} = $session->phrase( "Update/Views:no_grouping_title" );
+			}	
+			else
+			{
+				my $gfield = $ds->get_field( $fieldname );
+				$o{"grouping"} = $gfield->render_name( $session )->toString;
+			}
+
+			$title = $session->phrase( $phrase_id, %o );
+		}
+	
+		if( !defined $title )
+		{
+			$title = $session->phrase(
+				"bin/generate_views:indextitle",
+				viewname=>$session->get_view_name( $ds, $view->{id} ) );
+		}
+
+
 		# needs html escaping?
 		# needs open testing etc.
-		open( TITLE, ">$page_file_name.title" );
-		print TITLE "title: $page_file_name";
+		open( TITLE, ">$page_file_name.title" ) || EPrints::abort( "Failed to write $page_file_name.title: $!" );
+		print TITLE $title;
 		close TITLE;
-		open( TITLETXT, ">$page_file_name.title.textonly" );
-		print TITLETXT "title: $page_file_name";
+		open( TITLETXT, ">$page_file_name.title.textonly" ) || EPrints::abort( "Failed to write $page_file_name.title.textonly: $!" );
+		print TITLETXT $title;
 		close TITLETXT;
 		if( defined $view->{template} )
 		{
-			open( TEMPLATE, ">$page_file_name.template" );
+			open( TEMPLATE, ">$page_file_name.template" ) || EPrints::abort( "Failed to write $page_file_name.template: $!" );
 			print TEMPLATE $view->{template};
 			close TEMPLATE;
 		}
-		open( PAGE, ">$page_file_name.page" );
+
+		open( PAGE, ">$page_file_name.page" ) || EPrints::abort( "Failed to write $page_file_name.page: $!" );
 
 		print PAGE "<div class='ep_view_page ep_view_page_view_".$view->{id}."'>";
 
-		my $first = 1;
 
 		if( scalar @{$alt_views} > 1 )
 		{
-			print PAGE "<div class='ep_view_group_by'>Group by: ";
+			my $groups = $session->make_doc_fragment;
+			my $first = 1;
 			foreach my $alt_view2 ( @{$alt_views} )
 			{
 				my( $fieldname2, $mode2 ) = split( /;/, $alt_view2 );
+
 				my $link_name = "$target.\L$fieldname2";
+
 				if( $first ) { $link_name = $target; }
-				print PAGE " | " unless $first;
-				if( $fieldname ne $fieldname2 )
+
+				if( !$first )
 				{
-					$link_name =~ /([^\/]+)$/;
-					print PAGE "<a href='$1.html'>";
+					$groups->appendChild( $session->html_phrase( "Update/Views:group_seperator" ) );
 				}
+
+				my $group;
 				if( $fieldname2 eq "DEFAULT" )
 				{
-					print PAGE "No Grouping";
+					$group = $session->html_phrase( "Update/Views:no_grouping" );
 				}
 				else
 				{
-					my $field2 = $ds->get_field( $fieldname2 );
-					print PAGE $field2->render_name( $session )->toString;
+					$group = $ds->get_field( $fieldname2 )->render_name( $session );
 				}
-				if( $fieldname ne $fieldname2 )
+				
+				if( $fieldname eq $fieldname2 )
 				{
-					print PAGE "</a>";
+					$group = $session->html_phrase( "Update/Views:current_group", group=>$group );
 				}
+				else
+				{
+					$link_name =~ /([^\/]+)$/;
+					my $link = $session->render_link( "$1.html" );
+					$link->appendChild( $group );
+					$group = $link;
+				}
+		
+				$groups->appendChild( $group );
+
 				$first = 0;
 			}
-			print PAGE "</div>";
+
+			print PAGE $session->html_phrase( "Update/Views:group_by", groups=>$groups )->toString;
 		}
 
 		if( $fieldname eq "DEFAULT" ) 
@@ -660,34 +757,36 @@ sub update_view_page
 		}
 
 
-
-
 		my $field = $ds->get_field( $fieldname );
 		my $data = group_items( $session, \@items, $field, $mode );
 
-		$first = 1;
-		print PAGE "<div class='ep_view_jump_to'>Jump to: ";
+
+		my $first = 1;
+		my $jumps = $session->make_doc_fragment;
 		foreach my $pair ( @{$data} )
 		{
 			my( $code, $value, $items ) = @{$pair};
 	
-			print PAGE " | " unless $first;
-			print PAGE "<a href='#".EPrints::Utils::escape_filename( $code )."'>";
-			my $heading;
+			if( !$first )
+			{
+				$jumps->appendChild( $session->html_phrase( "Update/Views:jump_seperator" ) );
+			}
+
+			my $link = $session->render_link( "#".EPrints::Utils::escape_filename( $code ) );
 			if( $mode eq "first_letter" )
 			{
-				$heading = $code;
+				$link->appendChild( $session->make_text( $code ) );
 			}
 			else
 			{
-				$heading = EPrints::XML::to_string( $field->render_single_value( $session, $value ) );
+				$link->appendChild( $field->render_single_value( $session, $value ) );
 			}
-			print PAGE $heading;
-			print PAGE "</a>";
+
+			$jumps->appendChild( $link );
 
 			$first = 0;
 		}
-		print PAGE "</div>\n";
+		print PAGE $session->html_phrase( "Update/Views:jump_to", jumps=>$jumps )->toString;
 
 		foreach my $pair ( @{$data} )
 		{
